update code 29/6